updated screen shots and links

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <nav>
                 <ul>
                     <!-- <li><a href="">About Me</a></li> -->
-                    <li class="navSm"><a href="#p1">What Song is That</a></li>
-                    <li class="navSm"><a href="#p2">Weather Dashboard</a></li>
-                    <li class="navSm" ><a href="#p3">Work Day Calender</a></li>
+                    <li class="navSm"><a href="#p1">Moi-me-ries</a></li>
+                    <li class="navSm"><a href="#p2">Oh My Blog!</a></li>
+                    <li class="navSm" ><a href="#p3">What-Song-is-That<i>the app</i></a></li>
                     <li class="navSm"><a href="#contact">Contact Information</a></li>
-                    <li class="navSm navFix"><a href="https://drive.google.com/file/d/1G4GBE9pvErDyvYcXAmeyyxnyZAioABcq/view?usp=sharing" target="blank">Resume</a></li>
+                    <li class="navSm navFix"><a href="https://drive.google.com/file/d/1DqfUd_JQ1CFjbOprzEgzUG5oIGaw7TGb/view?usp=sharing" target="blank">Resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,10 +37,10 @@
             <article class="mainBack1 back" id="p1">
                 <div class="cardHorizon  cardOdd">
                     <section class="card" id="card1">
-                            <a href="https://harben31.github.io/Whats-Song-is-That-the-app/" class="contentLink" id="link1" target="blank">What Song is That <i> &nbsp the app</i></a>
+                            <a href="https://blooming-ocean-65385.herokuapp.com/" class="contentLink" id="link1" target="blank">Moi-Me-Ries</a>
                         <figure class="innerCard">
                                 <ul class="cardInfo cardInfoPrgm">
-                                    <li><h6>Programs Used:</h6></li>
+                                    <li><h6>Technologies:</h6></li>
                                     <li>JavaScript</li>
                                     <li>CSS</li>
                                     <li>HTML</li>
@@ -57,18 +57,18 @@
             </article>
 
             <aside class="blocker">
-                <h4>About What Song is That <i>the app</i> </h4>
-                <p>This application incorporates the Spotify and MusixMatch APIs. The user can input lyrics into the search and they if the song is in the MusixMatch database they will be returned several cards with the artist, song and a link to listen on Spotify. As this is an entirely client side app oAuth2's implicit grant flow is used to get permissions from the user's Spotify account. </p>
-                <a id="ghLink1" class="ghRepoLinks" href="https://github.com/harben31/Whats-That-Song-the-app" target="blank">Githup Repo</a>
+                <h4>About Moi-me-ries</h4>
+                <p>A social media app for sharing a users bucket-list. The user can add items to their bucket list and as they achieve each goal they can cross off that item and commemorate their journey with a photo and a journal entry.  </p>
+                <a id="ghLink1" class="ghRepoLinks" href="https://github.com/harben31/moi-me-ries" target="blank">Githup Repo</a>
             </aside>
 
             <article class="mainBack2 back backSm" id="p2">
                 <div class="cardHorizon cardEven">
                     <section class="card" id="card2">
-                            <a href="https://harben31.github.io/Weather-Dashboard/" class="contentLink" id="link2" target="blank">Weather Dashboard</a>
+                            <a href="https://arcane-escarpment-20008.herokuapp.com/" class="contentLink" id="link2" target="blank">Oh My Blog!</a>
                         <figure class="innerCard">
                             <ul class="cardInfo cardInfoPrgm">
-                                <li><h6>Programs Used:</h6></li>
+                                <li><h6>Technologies:</h6></li>
                                 <li>JavaScript</li>
                                 <li>CSS</li>
                                 <li>HTML</li>
@@ -84,29 +84,30 @@
             </article>     
 
             <aside class="blocker">
-                <h4>About Weather Dashboard</h4>
-                <p>The function of this app is to tell the user the weather in a given city. When the user searches the name of a city they are returned with the current weather as well as a five day forecast. Previous searches are stored in localStorage and rendered under the search bar for the user to click and revisit that city’s data. At the heart of the application is the Open Weather API. </p>
-                <a  id="ghLink2" class="ghRepoLinks" href="https://github.com/harben31/Weather-Dashboard" target="blank">Githup Repo</a>
+                <h4>About Oh My Blog!</h4>
+                <p>A blogging app where users read blog posts. If the user is a member or decides to sign up to be a member they have the option to write their own posts and comment on others' posts. </p>
+                <a  id="ghLink2" class="ghRepoLinks" href="https://github.com/harben31/Oh-My-Blog" target="blank">Githup Repo</a>
             </aside>
      
             <article class="mainBack3 back backSm" id="p3">
                 <div class="cardHorizon  cardOdd">
                     <section class="card" id="card1">
-                            <a href="https://harben31.github.io/Work-Day-Calender/" class="contentLink" id="link3" target="blank">Work Day Calander</a>
+                            <a href="https://harben31.github.io/Whats-Song-is-That-the-app/" class="contentLink" id="link3" target="blank">What-Song-is-That<i>the app</i></a>
                         <figure class="innerCard">
                             <!-- <h6>Programs used:<h6><br><p>HTML CSS JavaScript</p> -->
                             <ul class="cardInfo cardInfoPrgm">
-                                <li><h6>Programs Used:</h6></li>
+                                <li><h6>Technologies:</h6></li>
                                 <li>JavaScript</li>
                                 <li>Moment.js</li>
                                 <li>CSS</li>
                                 <li>HTML</li>
                             </ul>
-                            <!-- <ul class="cardInfo cardInfoNames">
+                            <ul class="cardInfo cardInfoNames">
                                 <li><h6>Colaberators:</h6></li>
-                                <li>Jane Doe</li>
-                                <li>Jon Doe</li>
-                            </ul> -->
+                                <li>Asia Alnahi</li>
+                                <li>Cassandra Cunningham</li>
+                                <li>Erin Blaize</li>
+                            </ul>
                         </figure>
                     </section>
                 </div>
@@ -114,9 +115,9 @@
         </div>
 
         <aside class="blocker" id="lastBlocker">
-            <h4>About Workday Calender</h4>
-            <p> Users can input meetings, deadlines or other data onto the hour block. The blocks are color coded gray for past hours, red for current hour and green for future hours. The data can be saved into localStorage if the user clicks the save button on the right side of the hour black and will be retrieved until the users clicks the clear schedule button.</p>
-            <a id="ghLink3" class="ghRepoLinks" href="https://github.com/harben31/Work-Day-Calender" target="blank">Githup Repo</a>
+            <h4>About What-Song-is-That<i>the app</i></h4>
+            <p> This application incorporates the Spotify and MusixMatch APIs. The user can input lyrics into the search and they if the song is in the MusixMatch database they will be returned several cards with the artist, song and a link to listen on Spotify. As this is an entirely client side app oAuth2's implicit grant flow is used to get permissions from the user's Spotify account.</p>
+            <a id="ghLink3" class="ghRepoLinks" href="https://github.com/harben31/Whats-Song-is-That-the-app" target="blank">Githup Repo</a>
         </aside>
 
         <footer>
